# photo_archivist

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  photo_archivist.db  pyproject.toml  requirements.txt
.agent/: PLANS.md  PRD-template.md  TDD-template.md  plan-template.md  test.prompt.md
.github/: copilot-instructions.md
app/: __init__.py  config.py  deps.py  main.py  models.py
app/auth/: msal_client.py  routes.py
app/models/: domain.py  repo.py  schemas.py
app/print/: kite_client.py  routes.py
app/scoring/: dedupe.py  metrics.py
app/services/: __init__.py  config.py  print_orders.py  scan_manager.py  scanner.py  thumbnails.py
app/services/pipeline/: dedupe.py  enumerator.py  interfaces.py  metadata.py  models.py  quality.py  scoring.py  selector.py
app/shortlist/: builder.py  routes.py
app/sync/: delta_scanner.py  graph_client.py  routes.py  scheduler.py
app/telemetry/: log.py
app/templates/: index.html
app/templates/partials/: print_controls.html  shortlist.html
app/ui/: pages.py
app/ui/static/css/: app.css
app/ui/templates/: _partials.html  _photo_card.html  base.html  home.html  review.html  settings.html
app/utils/: errors.py
docs/: PRD.md  PlanSlice00.md  PlanSlice01.md  PlanSlice02.md  README.md  TDD.md  build-log.md  manual_onedrive_scan_execplan.md  prd.md  step-1-research-output.md  step-2-planning-output.md  tdd.md
docs/apis/: prodigi.md
docs/slices/: README.md  slice-0.md  slice-1.md  slice-10.md  slice-2.md  slice-3.md  slice-4.md  slice-5.md  slice-6.md  slice-7.md  slice-8.md  slice-9.md
prompts/: PROCESS.md  step-1-research.prompt.md  step-2-design.prompt.md  step-3-plan-and-execute.prompt.md  step-3-plan.prompt.md  virtual-env-reset.prompt.md
scripts/: dev_run.sh
src/PHOTO_ARCHIVIST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/httpx/: __init__.py
src/photo_archivist/: app.py  config.py  schemas.py
src/photo_archivist/auth/: __init__.py  msal_client.py
src/photo_archivist/graph/: __init__.py  client.py
src/photo_archivist/services/: __init__.py  scan_service.py
src/photo_archivist/storage/: __init__.py  db.py  models.py  repo.py
src/photo_archivist/utils/: __init__.py  crypto.py
templates/: PRD-template.md
tests/: conftest.py  test_api_contracts.py  test_app.py  test_dedupe.py  test_print.py  test_privacy.py  test_scan_manager.py  test_scanner.py  test_shortlist.py  test_sync.py
tests/api/: test_auth_connect.py  test_scan_endpoints.py
tests/auth/: test_msal_client.py
tests/graph/: test_graph_client.py
tests/services/: test_scan_service.py
tests/storage/: test_db.py
