[project]
name = "PHOTO_ARCHIVIST"
version = "0.0.0"
description = "Photo Archivist application"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [ { name = "Doug", email = "doug@example.com" } ]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "SQLAlchemy>=2.0",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "black",
    "mypy",
    "types-requests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ruff configuration

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", "venv", "env"]
select = ["E", "F", "I", "C", "B", "Q"]

[tool.ruff.per-file-ignores]
# Allow __init__ to have unused imports for re-exporting
"**/__init__.py" = ["F401"]

# black configuration
[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
