[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-archivist"
version = "0.1.0"
description = "Local FastAPI app for curating photos by date and brightness."
readme = "docs/README.md"
requires-python = ">=3.12"
authors = [
  { name = "Photo Archivist Team" }
]
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pillow>=11.0.0",
  "httpx>=0.27.0",
  "email-validator>=2.1.0",
  "opencv-python-headless>=4.10.0.84",
  "imagehash>=4.3.1",
  "transformers>=4.44.2",
  "torch>=2.2.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
  "PLE",
  "RUF100"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.setuptools]
packages = ["app"]
